css/style.css
body {
    margin: 0;
    /* font-family: 'Lato', sans-serif; */
    background: #1C1C1C no-repeat center;
    color: #C4C4C4;
    font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
}

#profile-pic {
    min-width: 250px;
    min-height: 250px;
    display: block;
    background: url("../media/profile-pic.png") no-repeat;
    background-size: contain;
    background-position-x: center;
}

#logo {
    min-height: 50px;
    display: block;
    background: url("../media/logo.png") no-repeat;
    background-size: contain;
    background-position-x: center;
}

.content-block {
    border-left: 0.15rem #00A499 solid;
    position: relative;
    margin-bottom: 3rem;
}

.title {
    color: #00A499;
    font-weight: 600;
    font-size: larger;
    margin-block-end: 0.5rem;
    position: absolute;
    left: -0.25rem;
    top: -0.6rem;
}

.content-text {
    font-weight: lighter;
    padding-top: 1.5rem;
    padding-left: 0.8rem;
    padding-bottom: 0.1rem;
}

.content-text > div + div {
    margin-top: 0.4rem;
}

.highlight {
    color: #00A499;
}

.highlight-name {
    color: #00A499;
    font-weight: 500;
}

.job-row {
    column-gap: 0.5rem;
}

.job-row > a {
    color: inherit;
    text-decoration: none;
}

.gmail-link {
    display: block;
    height: 1.5rem;
    min-width: 2rem;
    background-image: url('../media/gmail-gray.png');
    background-size: contain;
}

.gmail-link:hover {
    background-image: url('../media/gmail.png');
}

.linkedin-link {
    display: block;
    height: 1.6rem;
    min-width: 6.8rem;
    background-image: url('../media/linkedin-gray.png');
    background-size: cover;
}

.linkedin-link:hover {
    background-image: url('../media/linkedin.png');
}

.reach-out-row {
    column-gap: 1rem;
    margin-top: 0.2rem;
}

